# syncmd

./: Cargo.toml  IMPLEMENTATION_PLAN.md  MVP_README.md  README.md  TWO_MAC_SETUP.md  VPS_SETUP.md
src/: cli.rs  file_transfer.rs  indexer.rs  main.rs  network.rs  security.rs  server.rs  sync.rs  types.rs  vps_server.rs  watcher.rs
test_sync/: test1.md  test2.md
