[package]
name = "syncmd"
version = "0.1.0"
edition = "2021"
description = "Efficient markdown file synchronization tool"
authors = ["Martin Betz <martin@martinbetz.dev>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.0"
walkdir = "2.0"
notify = "6.0"
rusqlite = { version = "0.29", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
base64 = "0.21"
rand = "0.8"
rand_core = "0.6"
md-5 = "0.10"
diff = "0.1"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.0"
aes-gcm = "0.9"
sha2 = "0.9"
hmac = "0.11"
pbkdf2 = "0.9"
x25519-dalek = "1.0"
ed25519-dalek = "1.0"
curve25519-dalek = "3.0"
serde_bytes = "0.11"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"
test-log = "0.2"

[[bin]]
name = "syncmd"
path = "src/main.rs"

[[bin]]
name = "syncmd-server"
path = "src/server.rs"

[[bin]]
name = "syncmd-vps"
path = "src/vps_server.rs"